5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1613_1805.log
== TEST (2019-04-01 09:12:37) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(xm)
print(xy)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(xy)
NameError: name 'xy' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:12:45) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(xm)
print(xy)

-- EXECUTION TIME:
0.28156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1805/main.py", line 8, in <module>
    print(xy)
NameError: name 'xy' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:13:52) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(round(xm,1))
print(round(ym,1))

-- OUTPUT:
40.0
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:14:11) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(round(xm,1))
print(round(ym,1))

-- OUTPUT:
40.0
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:14:20) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(round(xm,1))
print(round(ym,1))

-- EXECUTION TIME:
0.138235
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
49.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
3.9
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
4.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:14:30) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(round(xm,1))
print(round(ym,1))

-- OUTPUT:
40.0
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:14:49) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(round(xm,1))
print(round(ym,1))

-- EXECUTION TIME:
0.154804
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
49.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
3.9
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
4.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:15:06) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(round(xm,1))
print(round(ym,1))

-- OUTPUT:
40.0
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:15:16) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(round(xm,1))
print(round(ym,1))

-- OUTPUT:
40.0
49.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:15:34) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2)
print(round(xm,1))
print(round(ym,1))

-- EXECUTION TIME:
0.194138
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
49.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
3.9
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
4.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:16:12) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by/2
print(round(xm,1))
print(round(ym,1))

-- ERROR:
File "XXXX", line 7
    print(round(xm,1))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:16:39) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by)/2
print(round(xm,1))
print(round(ym,1))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 09:16:51) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by)/2
print(round(xm,1))
print(round(ym,1))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 09:17:05) 
-- CODE:
ax=float(input("ax"))
ay=float(input("ay"))
bx=float(input("bx"))
by=float(input("by"))
xm=(ax+bx)/2
ym=(ay+by)/2
print(round(xm,1))
print(round(ym,1))

-- EXECUTION TIME:
0.151163
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
